--- a/dokumentointi/Pit/201403202244/Snd.Gamelogic/index.html
+++ b/dokumentointi/Pit/201403202244/Snd.Gamelogic/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>4</td>
-            <td>75% <div class="coverage_bar"><div class="coverage_complete" style="width:75%"></div><div class="coverage_ledgend">43/57</div></div></td>
-            <td>86% <div class="coverage_bar"><div class="coverage_complete" style="width:86%"></div><div class="coverage_ledgend">19/22</div></div></td>
+            <td>6</td>
+            <td>63% <div class="coverage_bar"><div class="coverage_complete" style="width:63%"></div><div class="coverage_ledgend">53/84</div></div></td>
+            <td>70% <div class="coverage_bar"><div class="coverage_complete" style="width:70%"></div><div class="coverage_ledgend">21/30</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,15 +92,27 @@
     <tbody>
 
         <tr>
+            <td><a href="./Game.java.html">Game.java</a></td>
+            <td><div class="coveragePercentage">43% </div><div class="coverage_bar"><div class="coverage_complete" style="width:43%"></div><div class="coverage_ledgend">3/7</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/2</div></div></td>
+        </tr>
+
+        <tr>
             <td><a href="./MovingObject.java.html">MovingObject.java</a></td>
             <td><div class="coveragePercentage">67% </div><div class="coverage_bar"><div class="coverage_complete" style="width:67%"></div><div class="coverage_ledgend">6/9</div></div></td>
             <td><div class="coveragePercentage">67% </div><div class="coverage_bar"><div class="coverage_complete" style="width:67%"></div><div class="coverage_ledgend">2/3</div></div></td>
         </tr>
 
         <tr>
+            <td><a href="./ObjectHolder.java.html">ObjectHolder.java</a></td>
+            <td><div class="coveragePercentage">43% </div><div class="coverage_bar"><div class="coverage_complete" style="width:43%"></div><div class="coverage_ledgend">6/14</div></div></td>
+            <td><div class="coveragePercentage">20% </div><div class="coverage_bar"><div class="coverage_complete" style="width:20%"></div><div class="coverage_ledgend">1/5</div></div></td>
+        </tr>
+
+        <tr>
             <td><a href="./Position.java.html">Position.java</a></td>
-            <td><div class="coveragePercentage">83% </div><div class="coverage_bar"><div class="coverage_complete" style="width:83%"></div><div class="coverage_ledgend">15/18</div></div></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">7/7</div></div></td>
+            <td><div class="coveragePercentage">67% </div><div class="coverage_bar"><div class="coverage_complete" style="width:67%"></div><div class="coverage_ledgend">16/24</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">8/8</div></div></td>
         </tr>
 
         <tr>
