--- a/dokumentointi/Pit/201404032306/Snd.Gamelogic/index.html
+++ b/dokumentointi/Pit/201404032306/Snd.Gamelogic/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>6</td>
-            <td>72% <div class="coverage_bar"><div class="coverage_complete" style="width:72%"></div><div class="coverage_ledgend">111/154</div></div></td>
-            <td>51% <div class="coverage_bar"><div class="coverage_complete" style="width:51%"></div><div class="coverage_ledgend">59/115</div></div></td>
+            <td>8</td>
+            <td>77% <div class="coverage_bar"><div class="coverage_complete" style="width:77%"></div><div class="coverage_ledgend">184/238</div></div></td>
+            <td>56% <div class="coverage_bar"><div class="coverage_complete" style="width:56%"></div><div class="coverage_ledgend">84/151</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,21 +92,33 @@
     <tbody>
 
         <tr>
+            <td><a href="./AI.java.html">AI.java</a></td>
+            <td><div class="coveragePercentage">60% </div><div class="coverage_bar"><div class="coverage_complete" style="width:60%"></div><div class="coverage_ledgend">3/5</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+        </tr>
+
+        <tr>
             <td><a href="./Check.java.html">Check.java</a></td>
             <td><div class="coveragePercentage">98% </div><div class="coverage_bar"><div class="coverage_complete" style="width:98%"></div><div class="coverage_ledgend">40/41</div></div></td>
             <td><div class="coveragePercentage">62% </div><div class="coverage_bar"><div class="coverage_complete" style="width:62%"></div><div class="coverage_ledgend">33/53</div></div></td>
         </tr>
 
         <tr>
+            <td><a href="./Control.java.html">Control.java</a></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">62/62</div></div></td>
+            <td><div class="coveragePercentage">89% </div><div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">24/27</div></div></td>
+        </tr>
+
+        <tr>
             <td><a href="./Game.java.html">Game.java</a></td>
-            <td><div class="coveragePercentage">43% </div><div class="coverage_bar"><div class="coverage_complete" style="width:43%"></div><div class="coverage_ledgend">3/7</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/2</div></div></td>
+            <td><div class="coveragePercentage">54% </div><div class="coverage_bar"><div class="coverage_complete" style="width:54%"></div><div class="coverage_ledgend">7/13</div></div></td>
+            <td><div class="coveragePercentage">17% </div><div class="coverage_bar"><div class="coverage_complete" style="width:17%"></div><div class="coverage_ledgend">1/6</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./ObjectHolder.java.html">ObjectHolder.java</a></td>
-            <td><div class="coveragePercentage">51% </div><div class="coverage_bar"><div class="coverage_complete" style="width:51%"></div><div class="coverage_ledgend">28/55</div></div></td>
-            <td><div class="coveragePercentage">22% </div><div class="coverage_bar"><div class="coverage_complete" style="width:22%"></div><div class="coverage_ledgend">9/41</div></div></td>
+            <td><div class="coveragePercentage">42% </div><div class="coverage_bar"><div class="coverage_complete" style="width:42%"></div><div class="coverage_ledgend">28/66</div></div></td>
+            <td><div class="coveragePercentage">20% </div><div class="coverage_bar"><div class="coverage_complete" style="width:20%"></div><div class="coverage_ledgend">9/45</div></div></td>
         </tr>
 
         <tr>
@@ -123,7 +135,7 @@
 
         <tr>
             <td><a href="./SpeedVector.java.html">SpeedVector.java</a></td>
-            <td><div class="coveragePercentage">76% </div><div class="coverage_bar"><div class="coverage_complete" style="width:76%"></div><div class="coverage_ledgend">13/17</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">17/17</div></div></td>
             <td><div class="coveragePercentage">78% </div><div class="coverage_bar"><div class="coverage_complete" style="width:78%"></div><div class="coverage_ledgend">7/9</div></div></td>
         </tr>
 
