--- a/dokumentointi/Pit/201404032306/Snd/index.html
+++ b/dokumentointi/Pit/201404032306/Snd/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>1</td>
-            <td>33% <div class="coverage_bar"><div class="coverage_complete" style="width:33%"></div><div class="coverage_ledgend">6/18</div></div></td>
-            <td>22% <div class="coverage_bar"><div class="coverage_complete" style="width:22%"></div><div class="coverage_ledgend">2/9</div></div></td>
+            <td>2</td>
+            <td>42% <div class="coverage_bar"><div class="coverage_complete" style="width:42%"></div><div class="coverage_ledgend">33/79</div></div></td>
+            <td>4% <div class="coverage_bar"><div class="coverage_complete" style="width:4%"></div><div class="coverage_ledgend">2/48</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,8 +93,14 @@
 
         <tr>
             <td><a href="./Main.java.html">Main.java</a></td>
-            <td><div class="coveragePercentage">33% </div><div class="coverage_bar"><div class="coverage_complete" style="width:33%"></div><div class="coverage_ledgend">6/18</div></div></td>
-            <td><div class="coveragePercentage">22% </div><div class="coverage_bar"><div class="coverage_complete" style="width:22%"></div><div class="coverage_ledgend">2/9</div></div></td>
+            <td><div class="coveragePercentage">29% </div><div class="coverage_bar"><div class="coverage_complete" style="width:29%"></div><div class="coverage_ledgend">7/24</div></div></td>
+            <td><div class="coveragePercentage">17% </div><div class="coverage_bar"><div class="coverage_complete" style="width:17%"></div><div class="coverage_ledgend">2/12</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./MyGraphics.java.html">MyGraphics.java</a></td>
+            <td><div class="coveragePercentage">47% </div><div class="coverage_bar"><div class="coverage_complete" style="width:47%"></div><div class="coverage_ledgend">26/55</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/36</div></div></td>
         </tr>
 
      </tbody>
